--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,17 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
+    implementation('io.jsonwebtoken:jjwt-api:0.11.5')
+
 
     runtimeOnly('mysql:mysql-connector-java')
     runtimeOnly('com.h2database:h2')
+    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
+    runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
     compileOnly('org.projectlombok:lombok:1.18.24')
+
     annotationProcessor('org.projectlombok:lombok:1.18.24')
 
     testCompileOnly('org.projectlombok:lombok:1.18.24')
