--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation('io.jsonwebtoken:jjwt-impl:0.11.5')
     implementation('io.springfox:springfox-swagger2:2.9.2')
     implementation('io.springfox:springfox-swagger-ui:2.9.2')
+    implementation('org.springframework.boot:spring-boot-starter-aop')
 
 
     runtimeOnly('mysql:mysql-connector-java')
